# park-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
hw1/: CMakeLists.txt  README.md
hw1/lib/dataset/: CMakeLists.txt
hw1/lib/dataset/include/: dataset.hpp
hw1/lib/dataset/src/: dataset.cpp
hw1/lib/name_basics/: CMakeLists.txt
hw1/lib/name_basics/include/: name_basics.hpp
hw1/lib/name_basics/src/: name_basics.cpp
hw1/lib/title_akas/: CMakeLists.txt
hw1/lib/title_akas/include/: title_akas.hpp
hw1/lib/title_akas/src/: title_akas.cpp
hw1/lib/title_basics/: CMakeLists.txt
hw1/lib/title_basics/include/: title_basics.hpp
hw1/lib/title_basics/src/: title_basics.cpp
hw1/lib/title_crew/: CMakeLists.txt
hw1/lib/title_crew/include/: title_crew.hpp
hw1/lib/title_crew/src/: title_crew.cpp
hw1/lib/utils/: CMakeLists.txt
hw1/lib/utils/include/: utils.hpp
hw1/lib/utils/src/: utils.cpp
hw1/src/: main.cpp
hw2/: CMakeLists.txt  README.md
hw2/lib/cat/: CMakeLists.txt
hw2/lib/cat/include/: cat.hpp
hw2/lib/cat/src/: cat.cpp
hw2/lib/echo/: CMakeLists.txt
hw2/lib/echo/include/: echo.hpp
hw2/lib/echo/src/: echo.cpp
hw2/lib/head/: CMakeLists.txt
hw2/lib/head/include/: head.hpp
hw2/lib/head/src/: head.cpp
hw2/lib/ioperation/: CMakeLists.txt
hw2/lib/ioperation/include/: ioperation.hpp
hw2/lib/utils/: CMakeLists.txt
hw2/lib/utils/include/: utils.hpp
hw2/lib/utils/src/: utils.cpp
hw2/src/: main.cpp
